# x-fp

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  environment_generic.yml  environment_generic_dev.yml  environment_generic_minimal.yml  environment_linux64.yml  environment_osx.yml  pyproject.toml
docs/: conf.py  index.rst  xfp.rst
example_data/: df_test_herg.tsv  herg_model-xgb.json
src/xfp/: core_xfp.py  report_maker.py  xfp_tree_explainer.py  xfp_xgb.py
src/xfp/resources/: rendering_info.txt  shap_tree_explainer_info.txt  xgb_feature_importance.txt
test_data/: pickled_shap_explainer_fp4.pkl
tests/: test_core_xfp.py
tutorials/: adding_feature_importance_method.md
