[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "x-fp"
version = "1.0.0"
authors = [
    { name = "Marcel Baltruschat", email = "marcel.baltruschat@tu-dortmund.de" },
    { name = "Aishvarya Tandon", email = "aishvarya.tandon@tu-dortmund.de" },
]
description = "Explainable fingerprints for machine learning"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<4"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Reflect any changes in environment_generic.yml
dependencies = [
#    "rdkit",  # if environment was created with conda, RDKit is not recognized by pip and gets unnecessarily reinstalled
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "tqdm",
    "fpdf2",
    "jupyterlab",
    "shap",
    "ipywidgets",
    "black",
]

[project.urls]
"Homepage" = "https://github.com/czodrowskilab/x-fp"
"Bug Tracker" = "https://github.com/czodrowskilab/x-fp/issues"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
